--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -13,29 +13,30 @@ window#waybar{
     padding: 5px;
     margin: 3px;
     border-radius:10px;
-    background: alpha(@background,.95);
-    box-shadow: 0px 0px 2px rgba(0, 0, 0, .95);
+    background: alpha(@background,.6);
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, .8);
 }
 
 .modules-center {
     padding:5px;
     margin:3px;
     border-radius:10px;
-    background: alpha(@background,.6);
+    background: alpha(@background,.8);
     box-shadow: 0px 0px 2px rgba(0, 0, 0, .6);
 }
 .modules-right {
     padding: 5px;
     margin: 3px;
     border-radius:10px;
-    background: alpha(@background,.6);
+    background: alpha(@background,.8);
     box-shadow: 0px 0px 2px rgba(0, 0, 0, .6);
 }
+
 tooltip {
     background:@background;
     color: @color7;
 }
-#clock:hover, #custom-pacman:hover, #custom-notification:hover,#bluetooth:hover,#network:hover,#battery:hover, #cpu:hover,#memory:hover,#temperature:hover{
+#clock:hover, #pulseaudio:hover,#bluetooth:hover,#network:hover,#battery:hover, #cpu:hover,#memory:hover,#temperature:hover{
     transition: all .3s ease;
     color:@color9;
 }
@@ -88,13 +89,12 @@ tooltip {
     text-shadow: 0px 0px 2px rgba(0, 0, 0, .5);
 }
 #bluetooth{
-    padding: 0px 5px;
-    transition: all .3s ease;
+    padding: 0px 4px;
     color:@color7;
 
 }
 #network{
-    padding: 0px 10px;
+    padding: 0px 15px 0px 10px;
     color:@color7;
 
 }
@@ -127,44 +127,30 @@ tooltip {
 }
 
 #custom-expand{
-    padding: 0px 5px;
+    padding: 0px 10px;
     color:alpha(@foreground,.2);
     text-shadow: 0px 0px 2px rgba(0, 0, 0, .7);
     transition: all .3s ease; 
 }
 
 #custom-expand:hover{
-    color:rgba(255,255,255,.2);
+    color: green;
     text-shadow: 0px 0px 2px rgba(255, 255, 255, .5);
 }
 
 #cpu,#memory,#temperature{
-    padding: 0px 5px;
+    padding: 0px 10px;
     transition: all .3s ease; 
     color:@color7;
 
 }
 
 #custom-endpoint{
+    padding: 0px 10px 0px 0px;
     color:transparent;
     text-shadow: 0px 0px 1.5px rgba(0, 0, 0, 1);
 
 }
-
-/* #tray{ */
-/*     padding: 50px; */
-/*     transition: all .3s ease;  */
-/**/
-/* } */
-/* #tray menu * { */
-/*     padding: 0px 5px; */
-/*     transition: all .3s ease;  */
-/* } */
-/**/
-/* #tray menu separator { */
-/*     padding: 0px 5px; */
-/*     transition: all .3s ease;  */
-/* } */
 
 #window {
     border-radius: 10px;
