--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -11,7 +11,7 @@ window#waybar{
 
 .modules-left {
     padding: 5px;
-    margin: 3px;
+    margin: 3px 2px 0px 2px;
     border-radius:10px;
     background: alpha(@background,.6);
     box-shadow: 0px 0px 2px rgba(0, 0, 0, .8);
@@ -19,14 +19,14 @@ window#waybar{
 
 .modules-center {
     padding:5px;
-    margin:3px;
+    margin: 3px 2px 0px 2px;
     border-radius:10px;
     background: alpha(@background,.8);
     box-shadow: 0px 0px 2px rgba(0, 0, 0, .6);
 }
 .modules-right {
     padding: 5px;
-    margin: 3px;
+    margin: 3px 2px 0px 2px;
     border-radius:10px;
     background: alpha(@background,.8);
     box-shadow: 0px 0px 2px rgba(0, 0, 0, .6);
